# the-document-format

./: Cargo.toml  flake.nix
.github/workflows/: tests.yaml
crates/tdf-engine/: Cargo.toml
crates/tdf-engine/src/: README.md  builder.rs  file.rs  lib.rs  misc.rs  mod.rs  reader.rs  tags.rs
crates/tdf-engine/src/chunks/: doc_meta.rs  header.rs  mod.rs  pages.rs  prefix.rs  trailer.rs
crates/tdf-engine/src/chunks/store/: mod.rs  page_data.rs  primatives.rs
crates/tdf-engine/src/segments/: footer.rs  header.rs  meta.rs  mod.rs  pages.rs  suffix.rs
crates/tdf-engine/src/segments/store/: data_store.rs  mod.rs  page_store.rs
crates/tdf-renderer/: Cargo.toml
crates/tdf-renderer/src/: lib.rs
